# libsrtp

./: CMakeLists.txt  README.md  config.h.cmake.in  libsrtp.pc.in
crypto/cipher/: aes.c  aes_cbc.c  aes_gcm_ossl.c  aes_icm.c  aes_icm_ossl.c  cipher.c  null_cipher.c
crypto/hash/: auth.c  hmac.c  hmac_ossl.c  null_auth.c  sha1.c
crypto/kernel/: alloc.c  crypto_kernel.c  err.c  key.c
crypto/math/: datatypes.c  stat.c
crypto/replay/: rdb.c  rdbx.c
crypto/rng/: ctr_prng.c  rand_source.c  rand_source_ossl.c
doc/: header.tex
include/srtp/: srtp.h  srtp_priv.h
include/srtp/crypto/: aes.h  aes_gcm_ossl.h  datatypes.h  integers.h
srtp/: ekt.c  srtp.c
